@@ -25,6 +25,7 @@
    Removal of rcsid, will no longer strlcpy parts of the string.
  - (dtucker) [openbsd-compat/strtoll.c] Update from OpenBSD 1.4 -> 1.5.
  - (dtucker) [openbsd-compat/strtoul.c] Update from OpenBSD 1.5 -> 1.7.
+ - (dtucker) [openbsd-compat/readpassphrase.c] Update from OpenBSD 1.16 -> 1.18.
 
 20051105
  - (djm) OpenBSD CVS Sync
@@ -3267,4 +3268,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3968 2005/11/10 05:48:10 dtucker Exp $
+$Id: ChangeLog,v 1.3969 2005/11/10 05:56:28 dtucker Exp $
